# wiz-slack-logger

./: pyproject.toml  setup.cfg  setup.py
slacker_log_handler/: __init__.py
