
[tool.poetry]
authors = ["Sandeep Aggarwal <sandeep@wishousing.com>"]
description = "Forks https://github.com/andrewbeattie/slacker_log_handler that uses official SDK to send Slack messages."
name = "wiz-slack-logger"
version = "0.1.0"

packages = [{ include = "slacker_log_handler" }]


[tool.poetry.dependencies]
python = "^3.8"
slack-sdk = "^3.17.2"


[tool.poetry.dev-dependencies]


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
